<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OptionsFragment"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:text="@string/fragmentOptionText" />

    <Button
        style="@style/buttons1"
        android:id="@+id/vatBtn"
        android:text="@string/VAT"/>

    <Button
        style="@style/buttons1"
        android:id="@+id/discountBtn"
        android:text="@string/DISCOUNT"/>
</LinearLayout>